--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "web-vitals": "^2.1.4"
   },
+  "main": "dist/index.js", 
+  "module": "dist/index.js",
+  "files": [ "dist", "README.md" ],
+  "repository": {    
+    "type": "git",    
+    "url": "URL_OF_YOUR_REPOSITORY"  },
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files"
