--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mgs-modal",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "web-vitals": "^2.1.4"
   },
-  "main": "dist/index.js", 
+  "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": [ "dist", "README.md" ],
-  "repository": {    
-    "type": "git",    
-    "url": "URL_OF_YOUR_REPOSITORY"  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "URL_OF_YOUR_REPOSITORY"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files"
