--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mgs-modal",
-  "version": "0.2.0",
+  "version": "1.2.0",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/emmegiesse/react-mgs-modal"
+    "url": "git+https://github.com/emmegiesse/react-mgs-modal.git"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,5 +59,9 @@
   "tags": [
     "react",
     "modal"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/emmegiesse/react-mgs-modal/issues"
+  },
+  "homepage": "https://github.com/emmegiesse/react-mgs-modal#readme"
 }
