--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mgs-modal",
-  "version": "1.2.0",
+  "version": "2.2.1",
   "private": false,
-  "dependencies": {
+  "peerDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
