--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
-    "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.10",
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.16.10",
+    "@babel/preset-env": "^7.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0"
