--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "mgs-modal",
-  "version": "2.2.1",
+  "version": "1.9.5",
   "private": false,
   "peerDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   },
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -14,10 +23,6 @@
     "dist",
     "README.md"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/emmegiesse/react-mgs-modal.git"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files"
@@ -28,6 +33,14 @@
       "react-app/jest"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/emmegiesse/react-mgs-modal.git"
+  },
+  "bugs": {
+    "url": "https://github.com/emmegiesse/react-mgs-modal/issues"
+  },
+  "homepage": "https://github.com/emmegiesse/react-mgs-modal#readme",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -40,16 +53,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.2",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.20.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0"
-  },
-  "description": "modal  ## Installation !React is needed to use this component In you terminal enter :",
+  "description": "react modal component with props to customize",
   "keywords": [
     "react-component",
     "custom modal"
@@ -59,9 +63,5 @@
   "tags": [
     "react",
     "modal"
-  ],
-  "bugs": {
-    "url": "https://github.com/emmegiesse/react-mgs-modal/issues"
-  },
-  "homepage": "https://github.com/emmegiesse/react-mgs-modal#readme"
+  ]
 }
